added user editing

--- a/pages/directory_screen.html
+++ b/pages/directory_screen.html
@@ -16,11 +16,40 @@
                 <th>ФИО</th>
                 <th>Логин</th>
                 <th>Роль</th>
+                <th>Действия</th>
             </tr>
         </thead>
-        <tbody>
-        </tbody>
+        <tbody></tbody>
     </table>
+
+    <!-- Модальное окно -->
+    <div id="editModal" class="modal" style="display: none;">
+        <div class="modalBlock">
+            <h2>Редактировать пользователя</h2>
+            <form id="editUserForm">
+                <input type="hidden" id="editUserId">
+                <label for="editFullName">ФИО:</label>
+                <input type="text" id="editFullName" required><br>
+                <label for="editLogin">Логин:</label>
+                <input type="text" id="editLogin" required><br>
+                <label for="editRole">Роль:</label>
+                <select id="editRole" required>
+                    <option value="1">Администратор</option>
+                    <option value="2">Пользователь</option>
+                    <option value="3">Модератор</option>
+                    <option value="4">Менеджер</option>
+                    <option value="5">Разработчик</option>
+                    <option value="6">Тестировщик</option>
+                    <option value="7">Дизайнер</option>
+                    <option value="8">Системный администратор</option>
+                    <option value="9">HR</option>
+                </select><br>
+                <button type="submit">Сохранить изменения</button>
+                <button type="button" onclick="closeEditModal()">Отмена</button>
+            </form>
+        </div>
+    </div>
+
     <script src="../scripts/app.js"></script>
 </body>
 </html>
